# cargo-generate

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATES.md  cliff.toml  contributing.html  default.nix  favorites.html  flake.nix  index.html  installation.html  license.html  print.html  release-plz.toml  searcher-c2a407aa.js  searchindex-327bf47a.js  searchindex-772488ef.js  searchindex.js  searchindex.json  shell.nix  toc-43149f74.js  toc-61309ca1.js  toc-fcc4b84f.js  toc.html  toc.js  typos.toml  usage.html
.cargo/: audit.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  close-inactive-issues.yml  combine.yml  deb-release.yml  deploy.yml  e2e-test.yml  gh-pages.yml  rebase.yml  release-binary-assets.yml  release-pr.yml  release.yml
.zed/: keybindings.json  tasks.json
example-templates/arrays/: README.md.liquid  cargo-generate.toml
example-templates/hooks/: README.md  ask-license.rhai  cargo-generate.toml  fix-readme.rhai  post-script.rhai
example-templates/liquid-rhai-bridge/: hello.txt  rhai-example.rhai
example-templates/many-hooks-in-action/: README.md  README.md.liquid  ask-license.rhai  cargo-generate.toml  post-script.rhai  remove-unwanted.rhai  sed-licence.rhai  we-dont-keep-this-file.md
example-templates/placeholders/: Cargo.toml  cargo-generate.toml
example-templates/placeholders/src/: main.rs
example-templates/text-placeholder/: cargo-generate.toml
example-templates/text-placeholder2/: Cargo.toml  cargo-generate.toml
example-templates/text-placeholder2/src/: main.rs
examples/how-to-use-cargo-gen-as-library/: Cargo.toml
examples/how-to-use-cargo-gen-as-library/src/: main.rs
guide/: book.toml
guide/src/: README.md  SUMMARY.md  contributing.md  favorites.md  installation.md  license.md  templates.md  usage.md
guide/src/templates/: README.md  authoring.md  builtin_placeholders.md  conditional.md  custom_placeholders.md  ignoring.md  include_exclude.md  pitfalls.md  require_version.md  scripting.hook-types.md  scripting.md  scripting.mini-example.md  scripting.rhai-extensions.md  template_defined_placeholders.md
guide/src/usage/: README.md  git-over-ssh.md  gitconfig-instead-of.md
src/: absolute_path.rs  app_config.rs  args.rs  authors.rs  cargo.rs  config.rs  copy.rs  emoji.rs  favorites.rs  filenames.rs  fsutil.rs  git.rs  ignore_me.rs  ignoreme.rs  include_exclude.rs  interactive.rs  lib.rs  log.rs  main.rs  progressbar.rs  project_variables.rs  projectname.rs  template.rs  template_filters.rs  template_source.rs  template_values.rs  ui.rs  user_parsed_input.rs  username.rs  utils.rs  workspace_member.rs
src/favorites/: classic.rs  mod.rs  ui_next.rs
src/git/: NOTES.md  abbreviation.rs  clone.rs  clone_tool.rs  creds.rs  gitconfig.rs  gix_exploration.rs  identity_path.rs  init.rs  mod.rs  remote.rs  remote2.rs  repo_clone_builder_git2.rs  temp.rs  utils.rs
src/gix/: mod.rs
src/hooks/: context.rs  env_mod.rs  file_mod.rs  mod.rs  system_mod.rs  variable_mod.rs
src/interactive/: classic.rs  mod.rs  next.rs  ui_classic.rs
src/template_variable_types/: array_to_template_string.rs  mod.rs
src/template_variables/: authors.rs  crate_name.rs  crate_type.rs  current_year.rs  mod.rs  os_arch.rs  project_dir.rs  project_name.rs  project_name_input.rs
templates/: authoring.html  builtin_placeholders.html  conditional.html  custom_placeholders.html  ignoring.html  include_exclude.html  index.html  pitfalls.html  placeholders.html  require_version.html  scripting.hook-types.html  scripting.html  scripting.mini-example.html  scripting.rhai-extensions.html  template_defined_placeholders.html
tests/integration/: bare.rs  basics.rs  conditionals.rs  favorites.rs  filenames.rs  git.rs  git_instead_of.rs  git_over_ssh.rs  gitconfig.rs  hooks.rs  hooks_and_rhai.rs  library.rs  main.rs  online.rs  placeholders.rs  public_api.rs  template_filters.rs  values.rs  workspace_member.rs
tests/integration/config_file/: defaults.rs  favorites.rs  mod.rs  values.rs
tests/integration/helpers/: arg_builder.rs  commands.rs  mod.rs  prelude.rs  project.rs  project_builder.rs  project_templates.rs
tests/integration/template_config_file/: includes_and_excludes.rs  misc.rs  mod.rs  placeholders.rs
usage/: git-over-ssh.html  gitconfig-instead-of.html  index.html
