[package]
name = "cargo-generate"
description = "cargo, make me a project"
version = "0.21.1"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargo-generate/cargo-generate"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "*.md"]

[dependencies]
clap = { version = "~4.5", features = ["derive", "std", "help"], default-features = false }
git2 = { version = "~0.18", features = ["ssh", "https"], default-features = false }
auth-git2 = "~0.5"
console = "~0.15"
dialoguer = "~0.11"
indicatif = "~0.17"
tempfile = "~3.10"
regex = "~1.10"
heck = "~0.5"
walkdir = "~2.5"
remove_dir_all = "~0.8"
ignore = "~0.4"
anyhow = "~1.0"
toml = { version = "~0.8", features = ["preserve_order"] }
thiserror = "~1.0"
home = "~0.5"
sanitize-filename = "~0.5"
rhai = "~1.18"
path-absolutize = "~3.1"
gix-config = "~0.36"
paste = "~1.0"
names = { version = "~0.14", default-features = false }
log = "~0.4"
env_logger = "~0.11"
indexmap = { version = "~2", features = ["serde"] }
fs-err = "2.11"

# liquid
liquid = "~0.26"
liquid-core = "~0.26"
liquid-lib = "~0.26"
liquid-derive = "~0.26"

[dependencies.openssl]
version = "~0.10"
optional = true

[dependencies.semver]
version = "~1.0"
features = ["serde"]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dev-dependencies]
predicates = "~3.1"
assert_cmd = "~2.0"
indoc = "~2.0"
url = "~2.5"
bstr = "~1.9"

[features]
default = ["vendored-libgit2"]
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-openssl = ["openssl/vendored", "git2/vendored-openssl"]

[[bin]]
path = "src/main.rs"
name = "cargo-generate"

[profile.release]
lto = true
