[package]
name = "cargo-generate"
description = "cargo, make me a project"
version = "0.22.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargo-generate/cargo-generate"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "*.md"]

[dependencies.git2]
default-features = false
features = ["ssh", "https", "ssh_key_from_memory"]
version = "~0.19"

[dependencies]
anstyle = "1.0.7"
anyhow = "~1.0"
auth-git2 = "~0.5"
clap = { version = "~4.5", features = ["derive", "wrap_help"] }
console = "~0.15"
dialoguer = "~0.11"
env_logger = "~0.11"
fs-err = "2.11"
gix-config = "~0.40"
heck = "~0.5"
home = "~0.5"
ignore = "~0.4"
indexmap = { version = "~2", features = ["serde"] }
indicatif = "~0.17"
liquid = "~0.26"
liquid-core = "~0.26"
liquid-derive = "~0.26"
liquid-lib = "~0.26"
log = "~0.4"
names = { version = "~0.14", default-features = false }
openssl = { version = "~0.10", optional = true }
paste = "~1.0"
path-absolutize = "~3.1"
regex = "~1.10"
remove_dir_all = "~0.8"
rhai = "~1.19"
sanitize-filename = "~0.5"
semver = { version = "~1.0", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
tempfile = "~3.10"
thiserror = "~1.0"
time = "~0.3"
toml = { version = "~0.8", features = ["preserve_order"] }
walkdir = "~2.5"

[dev-dependencies]
assert_cmd = "~2.0"
bstr = "~1.9"
indoc = "~2.0"
predicates = "~3.1"
url = "~2.5"

[features]
default = ["vendored-libgit2"]
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-openssl = ["openssl/vendored", "git2/vendored-openssl"]

[[bin]]
path = "src/main.rs"
name = "cargo-generate"

[profile.release]
lto = true
